# codon_optimizer

./: .gitignore  MANIFEST.in  README.md  README.rmd  __init__.py  codon_optimizer.py  debug.py  make_executable.sh  pyproject.toml  requirements.txt  setup.py
codon_optimizer/: __init__.py  codon_optimizer.py
codon_optimizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
codon_optimizer/reference_seq/: Homo_sapiens_codon_frequency.csv
test/: 003_output_mix_coding_not_coding_optimized.fasta  __main__.py  debug.py
test/cases/: Mus_musculus_codon_frequency.csv  coding_seq_codon_optimized.fasta  input_coding_rna.fa  input_mix_coding_not_coding.fasta
test/reference_test_case/: 003_test.bcr.codon_optimized_formatted.fasta
tests/: test_codon_optimizer.py
tests/cases/: codon_optimized.fasta  input_coding_sequences.fa  input_not_coding_sequences.fa
tests/output/: mix_coding_not_coding_optimized.fasta
